tests/ui/const-generics/exhaustive-value.stderr
error[E0277]: the trait bound `(): Foo<const N>` is not satisfied
  --> $DIR/exhaustive-value.rs:262:6
   |
LL |     <() as Foo<N>>::test()
   |      ^^ the trait `Foo<const N>` is not implemented for `()`
   |
   = help: the following other types implement trait `Foo<const N>`:
             `()` implements `Foo<const { 0 }>`
             `()` implements `Foo<const { 1 }>`
             `()` implements `Foo<const { 10 }>`
             `()` implements `Foo<const { 100 }>`
             `()` implements `Foo<const { 101 }>`
             `()` implements `Foo<const { 102 }>`
             `()` implements `Foo<const { 103 }>`
             `()` implements `Foo<const { 104 }>`
           and 248 others

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
